// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders accent1 variant 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 20px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 6px;
  background: #1971c2;
  color: #ffffff;
  font-size: 16px;
  font-family: 'Fira Sans',Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #0b7285;
  color: #ffffff;
}

.emotion-0:hover {
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:active {
  background: #1864ab;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #74c0fc,0 0px 8px #74c0fc;
}

.emotion-0:disabled {
  opacity: 0.6;
}

.emotion-0:active {
  background: #0c8599;
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #66d9e8,0 0px 8px #66d9e8;
}

<button
  class="emotion-0"
  data-testid="my-button"
  id="my-button"
  type="button"
>
  <span>
    Click me
  </span>
</button>
`;

exports[`renders accent2 variant 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 20px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 6px;
  background: #1971c2;
  color: #ffffff;
  font-size: 16px;
  font-family: 'Fira Sans',Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #087f5b;
  color: #ffffff;
}

.emotion-0:hover {
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:active {
  background: #1864ab;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #74c0fc,0 0px 8px #74c0fc;
}

.emotion-0:disabled {
  opacity: 0.6;
}

.emotion-0:active {
  background: #099268;
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #63e6be,0 0px 8px #63e6be;
}

<button
  class="emotion-0"
  data-testid="my-button"
  id="my-button"
  type="button"
>
  <span>
    Click me
  </span>
</button>
`;

exports[`renders correctly 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 20px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 6px;
  background: #1971c2;
  color: #ffffff;
  font-size: 16px;
  font-family: 'Fira Sans',Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.emotion-0:hover {
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:active {
  background: #1864ab;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #74c0fc,0 0px 8px #74c0fc;
}

.emotion-0:disabled {
  opacity: 0.6;
}

<button
  class="emotion-0"
  data-testid="my-button"
  id="my-button"
  type="button"
>
  <span>
    Click me
  </span>
</button>
`;

exports[`renders dark theme 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 20px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 6px;
  background: #4dabf7;
  color: #000000;
  font-size: 16px;
  font-family: 'Fira Sans',Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.emotion-0:hover {
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:active {
  background: #339af0;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #228be6,0 0px 8px #228be6;
}

.emotion-0:disabled {
  opacity: 0.6;
}

<button
  class="emotion-0"
  data-testid="my-button"
  id="my-button"
  type="button"
>
  <span>
    Click me
  </span>
</button>
`;

exports[`renders medium size 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 20px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 6px;
  background: #1971c2;
  color: #ffffff;
  font-size: 16px;
  font-family: 'Fira Sans',Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  padding: 10px;
}

.emotion-0:hover {
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:active {
  background: #1864ab;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #74c0fc,0 0px 8px #74c0fc;
}

.emotion-0:disabled {
  opacity: 0.6;
}

<button
  class="emotion-0"
  data-testid="my-button"
  id="my-button"
  type="button"
>
  <span>
    Click me
  </span>
</button>
`;

exports[`renders neutral variant 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 20px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 6px;
  background: #1971c2;
  color: #ffffff;
  font-size: 16px;
  font-family: 'Fira Sans',Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #495057;
  color: #ffffff;
}

.emotion-0:hover {
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:active {
  background: #1864ab;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #74c0fc,0 0px 8px #74c0fc;
}

.emotion-0:disabled {
  opacity: 0.6;
}

.emotion-0:active {
  background: #343a40;
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #868e96,0 0px 8px #868e96;
}

<button
  class="emotion-0"
  data-testid="my-button"
  id="my-button"
  type="button"
>
  <span>
    Click me
  </span>
</button>
`;

exports[`renders secondary variant 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 20px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 6px;
  background: #1971c2;
  color: #ffffff;
  font-size: 16px;
  font-family: 'Fira Sans',Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #6741d9;
  color: #ffffff;
}

.emotion-0:hover {
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:active {
  background: #1864ab;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #74c0fc,0 0px 8px #74c0fc;
}

.emotion-0:disabled {
  opacity: 0.6;
}

.emotion-0:active {
  background: #5f3dc4;
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #b197fc,0 0px 8px #b197fc;
}

<button
  class="emotion-0"
  data-testid="my-button"
  id="my-button"
  type="button"
>
  <span>
    Click me
  </span>
</button>
`;

exports[`renders small size 1`] = `
.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 20px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 6px;
  background: #1971c2;
  color: #ffffff;
  font-size: 16px;
  font-family: 'Fira Sans',Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  padding: 4px 12px;
  font-size: 14px;
}

.emotion-0:hover {
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:active {
  background: #1864ab;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #74c0fc,0 0px 8px #74c0fc;
}

.emotion-0:disabled {
  opacity: 0.6;
}

<button
  class="emotion-0"
  data-testid="my-button"
  id="my-button"
  type="button"
>
  <span>
    Click me
  </span>
</button>
`;
